@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-13T01:22:48Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 0,
+  "timestamp" : "2022-04-13T08:21:55Z",
+  "count" : 9,
+  "count_minmax" : [ 0, 9 ],
+  "count_prev_day_inc" : 9,
   "count_prev_day_dec" : 1,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 0,
+  "uniques" : 7,
+  "uniques_minmax" : [ 0, 7 ],
+  "uniques_prev_day_inc" : 7,
   "uniques_prev_day_dec" : 0
 }
