@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-13T01:22:48Z",
+  "timestamp" : "2022-04-13T08:21:55Z",
   "count_outdated" : 74,
   "uniques_outdated" : 53,
-  "count" : 116,
-  "uniques" : 80,
+  "count" : 125,
+  "uniques" : 87,
   "clones" : [
     {
       "timestamp": "2022-03-30T00:00:00Z",
@@ -53,6 +53,13 @@
       "count_minmax": [ 3, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-04-13T00:00:00Z",
+      "count": 9,
+      "count_minmax": [ 0, 9 ],
+      "uniques": 7,
+      "uniques_minmax": [ 0, 7 ]
     }
   ]
 }
