@@ -1,3 +1,9 @@
+2022-04-13T08:21:55Z:
+* notice: last 14d: all unq: 51 18
+* notice: prev accum: outdated-all outdated-unq / all unq: 74 53 / 116 80
+* notice: next accum: outdated-all outdated-unq / all unq: 74 53 / 125 87
+* notice: prev json diff // prev day diff: unq all: +7 +9 / -0 -0 // +7 +9 / -0 -1
+
 2022-04-13T01:22:48Z:
 * notice: last 14d: all unq: 42 16
 * notice: prev accum: outdated-all outdated-unq / all unq: 61 47 / 112 78
